--- a/Portfolio.website.assignment.css
+++ b/Portfolio.website.assignment.css
@@ -1,7 +1,19 @@
 /*General Styling*/
 /*Body*/
 body {
-    margin:0%/*ensures site displays all the way to edge of browser screen*/
+    margin:0%; /*ensures site displays all the way to edge of browser screen*/
+    transition:3s opacity;
+    letter-spacing: 2.vw; /*vw is a relative measurement, 1vw is equal to 1% of viewport width*/
+    font-family:Garamond, Times New Roman;
+    font-size:1.5vw;
+    overflow-x:hidden; /*this prevents horiztonal scroll bar from appearing when the quote is hovered over*/
+    user-select:none; /*this prevents txt on webpage from being highlighted by user*/
+
+}
+
+/*this section contributes to fade effect for page that occurs when page is loaded*/
+body.fade-out {
+  opacity: .1;
 }
 /*Heading 1 elements*/
 h1 {
@@ -25,6 +37,7 @@ h1:hover {
 /*Styling for portfolio title text*/
 .white-text {
     color:rgb(246,204,204);
+    padding-top:5vh; 
 }
 /*Paragraph elements*/
 p {
@@ -38,7 +51,7 @@ p {
 }
 /*Paragraph element hover effect*/
 p:hover{
-    color: rgba(241, 195, 195, 0.745);
+    color:purple;
     background: 
       linear-gradient(90deg,#4c0b3e 50%,#000 0) 
       var(--_p,100%)/200% no-repeat;
@@ -60,6 +73,8 @@ p:hover{
   /*Anchor elements*/
   a {
     color:black;
+    cursor:pointer; /*ensure all links change mouse to pointer when hovered or clicked*/
+    text-decoration:underline;
   }
   /*Image elements*/
   img {
@@ -87,8 +102,12 @@ img:hover {
 }
 /*Footer styling*/
 footer {
-  padding:2%;
+  padding:5%;
   background-color:rgb(228, 199, 199);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  
 }
 /*****End general styling****/
 /*Navbar styling*/
@@ -178,7 +197,118 @@ footer {
 }
 /***End video styling***/
 
-/***Table styling***/
+/***SLIDESHOW STYLING***/
+#Slideshow_Background {
+  background:(255,255,255,0.35);
+}
+
+.mySlides {
+  display:none;/*prevents images from being displayed, using JS instead to display*/
+}
+
+/*Slidehosw section/Container*/
+#Slideshow_Container {
+  width:39.5vw; /*relative sizing of container for the slidehosw set to 39.5% of viewport width*/
+  height:auto; /*height of container is automatically adjusted based on content it is displaying*/
+  padding-top:4%; /*adds padding to top of slideshow container*/
+  position:relative;
+  margin:auto;
+}
+
+/*Remove underline from previous and next buttons on slidehsow*/
+#Slideshow_Container a {
+  text-decoration:none;
+}
+
+/*Images contained within slideshow*/
+.Slideshow_Images {
+  vertical-align:middle;
+  height:auto; /*height of images is automatically adjusted based on content, if images are different sizes they will display as different sizes*/
+  box-shadow:0px 5px 10px 12px rgba (0,0,0,.75);
+  width:100%'
+}
+
+/*Next/previous buttons*/
+.Previous, .Next {
+  cursor:pointer;
+  position:absolute; /*makes next and prev buttons relative to slideshow container*/
+  top:50%;
+  width:auto;
+  padding:2vw;
+  color:darkgray;
+  font-weight:bold;
+  font-size:1.5vw;
+  border-radius:0 3px 3px 0; /*adds slightly rounded border on top and bottom right corners*/
+  user-select:none; /*user can't highlight text*/
+  transition:0.6s ease; /*specifies details of hover transition for these elements*/
+}
+
+/*positioning next button on right hand side*/
+.Next {
+  right:0;
+  border-radius:3px 0 0 3px;
+}
+
+/*Hover effect on slide show buttons*/
+.Previous:hover, .Next:hover {
+  background-color:rgba (0,0,0,.8); /*makes background of arrows transparent gray*/
+  color:white; /*white when hovered over (arrows)*/
+}
+
+/*slideshow text*/
+.text {
+  color:white;
+  padding:1vw;
+  position:absolute; /*ensures text is positioned within image*/
+  bottom:0; /*sets text to bottom of page*/
+  width:100%; /*element covers full width of image*/
+  text-align:center;
+  font-family:Garamond, Times New Roman;
+  letter-spacing:.5vw;
+  font-size:1.5vw;
+  background-color: rgba(0,0,0,.75); /*slightly transparent black background*/
+  font-weight:bold;
+  border-radius:0px 0px 7px 7px; 
+}
+
+/*styling of dots under slideshow*/
+.dot {
+  cursor:pointer;
+  height:1vw; /*dot sizes are relative to viewport width*/
+  width:1vw;
+  margin:.25vw; /*adds additional spacing between dots*/
+  background-color:white;
+  border-radius:50%; /*makes dots circles by rounding each corner*/
+  display:inline-block; /*allows dots to sit next to eachother instead of on a new line*/
+  transition:background-color 0.6s ease; /*when clicked the dots transition to different color when clicked or hovered on effect defined below*/
+  z-index:1; /*ensures dots displayed above other elements*/
+}
+
+/*hover effect for slideshow dots*/
+.active, .dot:hover {
+  background-color:black;
+}
+
+/*Fading animation for slideshow*/
+.fade {
+  animation-name:fade;
+  animation-duration:1.5s;
+  -webkit-animation-name:fade;
+  -webkit-animation-duration:1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4;} /*image starts transparent*/
+  to {opacity:1;}/*image ends opaque*/
+}
+
+@keyframes fade {
+  from {opacity:.4;}
+  to {opacity:1;}
+}
+/***End slideshow Styling***/
+
+/***Table styling-this section covers styling for columns and rows within the table, the * is a universal selector that applies this effect to all elements on the page***/
 * {
   box-sizing:border-box;
 }
@@ -186,7 +316,7 @@ footer {
   float:left;
   width:50%;
   padding:10px;
-  padding-top:3%;
+  padding-top:0%;
   height:400px;
   background-color:#eab9b9;
 }
@@ -210,13 +340,111 @@ footer {
   height:450px;
 }
 .Row:after {
-  content"";/*leaving this blank allows footer display otherwise it overrites a column*/
+  content:"";/*leaving this blank allows footer display otherwise it overrites a column*/
   display:table;
   clear:both;
 }
-/***End of table styling***/
 
 /***Contact form styling***/
+
+/*Button used to open contact form*/
+.Pop_Up_Button {
+  position:fixed; /*element is positioned relative to viewport and stays in same location no matter what*/
+  bottom:1.75vw;
+  right:1.75vw;
+  width:25vw;
+  background-color:white;
+  color:black;
+  border:solid black;
+  cursor:pointer;
+  -webkit-animation:movePopup 5s; /*Animation for 5 seconds for Safari 4.0-8.0*/
+  animation:movePopup 5s; /*animation set for 5s*/
+}
+
+/*movePopup animation moves button from off the right side of screen to its fixed location on viewport*/
+@keyframes movePopup {
+  from {right: -40vw;}
+  to {right:1.75vw;}
+}
+
+@-webkit-keyframes movePopup {
+  from {right:-40vw;}
+  to {right:1.75vw;}
+}
+
+/*Styling for contact form*/
+.form-popup {
+  z-index:8;
+  display:none; /*will use js to show contact form*/
+  position:fixed;
+  bottom:.5vw;
+  right:5vw;
+}
+
+/*form styling*/
+.form-container {
+  max-width:49vw;
+  padding: 1vw;
+  background-color:white;
+}
+
+/*input fields*/
+.form-container input[type=text] {
+  width:100%;
+  padding:.93vw;
+  margin:.6vw 0 .6vw 0;
+  border:none;
+  background: Gainsboro;
+  font-size:1vw;
+}
+
+/*General styling for all buttons*/
+button {
+   font-family:Georgia, 'Times New Roman', Times, serif;
+   letter-spacing:.3vw;
+   font-size:1.5vw;
+   font-weight:bold;
+   padding:1.5vw;
+   cursor:pointer;
+   width:100%;
+   height:auto;
+}
+
+/*hover effect for contact and submit buttons*/
+button:hover, .form-container btn:hover {
+  color:white;
+  background-color:black;
+  transition-duration:1s;
+  -webkit-transition-duration:1s; /*for safari 4.0-8.0 */
+  border-color:silver;
+}
+
+/*Submit button*/
+.form-container .btn {
+  background-color:white;
+  color:black;
+  border-color:black;
+  margin-bottom:1vh;
+}
+
+/*Close button*/
+.form-container .cancel {
+  background-color:black;
+  color:white;
+  border-color:gray;
+}
+
+/*styling for close button on hover*/
+.form-container .cancel:hover {
+  color:white;
+  background-color:darkred;
+  transition-duration:1s;
+  -webkit-transition-duration:1s;
+  border-color:black;
+}
+
+/*above added recently*/
+
 /*input[input=text]targets all text input sections of the contact form*/
 input[type=text] {
   width:100%;
@@ -265,6 +493,92 @@ form {
 }
 /*End contact form styling*/
 
-/*Make mountain image fit to container new landscape image landscape aspect ratio*/
-/*Footer in wrong spot skim through line by line*/
-/*Columns don't match to images*/
+/***media query selection***/
+/*media rules for paragraph font size different screen size*/
+@media screen and (max-width:527px) {
+  p {
+    font-size:3.75vw;
+  }
+}
+
+@media screen and (min-width:528px) and (max-width:660px) {
+  p {
+    font-size:3.5vw;
+  }
+}
+
+@media screen and (min-width: 661px) and (max-width:799px) {
+  p {
+    font-size:2.75vw;
+  }
+}
+
+@media screen and (min-width:925px) and (max-width:1050px) {
+  p {
+    font-size:2.25vw;
+  }
+}
+
+@media screen and (min-width:1051px) and (max-width:1310px) {
+  p {
+    font-size:1.6vw;
+  }
+}
+
+@media screen and (min-width:1311px) and (max-width:1535px) {
+  p {
+    font-size:1.75vw;
+  }
+}
+
+@media screen and (min-width:1536px) and (max-width:2269px) {
+  p {
+    font-size:1.5vw;
+  }
+}
+
+@media screen and (min-width:2270px) {
+  p {
+    font-size:1.35vw;
+  }
+}
+
+/*media rule for navbar links for different screen sizes*/
+/*screens 1080px and smaller will have navbar links equally distributed*/
+@media screen and (max-width:1080px) {
+  .Navbar a{
+    width:20%;/*sets each navbar link to 1/5 of navbar*/
+    font-size:2.5vw;
+  }
+}
+
+/*enlarges font of the white text for smaller screens*/
+@media screen and (max-width:1080px) {
+  .white-text {
+    font-size:4.5vw;
+  }
+}
+
+/*possibly need to also do 550px for column tall*/
+@media screen and (min-width: 1725px) {
+  .Column_1 {
+    height:550px;
+  }
+  .Column_2 {
+    height:550px;
+  }
+}
+
+/*Media rule to remove margintop from h1 elements for extra large screens so paragraph fits column*/
+@media screen and (min-width:2000px) {
+  h1 {
+    margin-top:0;
+  }
+}
+
+
+/*smooth scrolling*/
+html {
+  scroll-behavior:smooth;
+}
+
